...
  <string name="url_help_install">http://blog.cattail-sw.com/?p=197</string>
  <string name="help_supported_ops">Show Supported Functions</string>
  <string name="url_support_ops">http://blog.cattail-sw.com/?p=212</string>
  
  <string name="user_input_dlg_title">Input</string>
  <string name="user_sel_dlg_title">Please Select One</string>
  <string name="err_title">Error</string>
  <string name="err_no_sdcard">No SD Card! Aborting</string>
  
  <string name="prog_startup">Starting Nanidroid</string>
  <string name="load_g">Loading Ghost\n%1$s&#8230;</string>

<!--  <string name=""></string> -->
  <string name="unsupported_shiori">\\0\\s0Sorry, this Ghost is using a SHIORI that is not yet supported by Nanidroid!\\e</string>
...
