<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:minWidth="@dimen/user_input_dlg_min_width"
  >
  <EditText android:id="@+id/user_in"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    />
  <LinearLayout android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <Button android:id="@id/ok_btn"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:text="@android:string/ok"/>
    <Button android:id="@id/cancel_btn"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:text="@android:string/cancel"/>
  </LinearLayout>
</LinearLayout>
